--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "add-menu",
   "version": "0.1.0",
+  "homepage":"http://OFaddmenu.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
